Fixing CSS to prevent container log line wrap

--- a/web-src/src/modules/job/components/JobContainerLogs.css
+++ b/web-src/src/modules/job/components/JobContainerLogs.css
@@ -4,6 +4,7 @@
     color: white;
     word-break: break-word;
     overflow-wrap: break-word;
+    overflow-x: scroll;
     font-family: "SFMono-Regular", Monaco, Menlo, Consolas, "Liberation Mono", Courier, monospace;
     font-size: 12px;
     line-height: 20px;
